fixed issue with toggle not being aligned with other tabs

--- a/src/styles/switch.css
+++ b/src/styles/switch.css
@@ -6,8 +6,6 @@
 
 .react-switch-label {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
   cursor: pointer;
   width: 3rem;
   height: 1.5rem;
@@ -37,4 +35,8 @@
 
 .react-switch-label:active .react-switch-button {
   width: 1.4rem;
+}
+
+.switch-container {
+  display: flex;
 }
